date of online added

--- a/views/studentPage.ejs
+++ b/views/studentPage.ejs
@@ -4,7 +4,7 @@
   
 <%- include('layouts/headers') -%>
 
-<body class="bg-light">
+<body>
     
     <%- include('layouts/navbar') -%>
     
@@ -171,7 +171,7 @@
                       
                       <td> <%= students.batchSession === undefined ? 'N/A' : capitalizeFirstLetter(students.batchSession) %></td>
                       
-                      <td class="text-primary"> Date of Admission </td>
+                      <td class="text-primary"> Date of Online </td>
                       
                       <td> : </td>
                       
