home page colour corrected

--- a/views/dca102welcomepage.ejs
+++ b/views/dca102welcomepage.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <%- include('layouts/headers') -%>
-   <body class="bg-light">
+   <body>
       <%- include('layouts/navbar') -%>
       <!-- --------------main container section------------------ -->
       <div class="container">
