--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,9 +5,10 @@
 <%- include('layouts/headers') -%>
 
 
-<body class="bg-white">
+<body>
        
     <%- include('layouts/navbar') -%>
+    
     
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
   <symbol id="check" viewBox="0 0 16 16">
@@ -15,11 +16,8 @@
     <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
   </symbol>
 </svg>
-    
-
 
     <!-- --------------main container section------------------ -->
-
     <main role="main" class="container">
         
     <div class="mission-header mt-4 p-3 pb-md-4 mx-auto text-center">
@@ -45,7 +43,7 @@
             <div class="card rounded fw-normal text-dark borderTop shadow-sm">
               
             <div class="card-header py-2 bg-light">
-            <h4 class="my-0 fw-bold text-center text-primary">Theory</h4>
+            <h4 class="my-0 fw-normal text-center bgColor">Theory</h4>
             </div>
           
             <p class="card-text text-justify fw-normal text-dark px-3 pt-2"> Question hlui behchhana siam a ni. Online assignment a awm zel bawk... </p>
@@ -64,7 +62,7 @@
             <div class="card rounded fw-normal text-dark borderTop shadow-sm">
               
           <div class="card-header py-2 bg-light">
-          <h4 class="my-0 fw-bold text-center text-primary">Practical</h4>
+          <h4 class="my-0 fw-normal text-center bgColor">Practical</h4>
           </div>
                 
             <p class="card-text text-wrap fw-normal text-dark px-3 pt-2">Syllabus milin practical video dah a ni. En chunga tih ve zel theih a ni...</p>
@@ -82,7 +80,7 @@
             <div class="card rounded fw-normal text-dark borderTop shadow-sm">
               
             <div class="card-header py-2 bg-light">
-            <h4 class="my-0 fw-bold text-center text-primary">Download</h4>
+            <h4 class="my-0 fw-normal text-center bgColor">Download</h4>
             </div>
                 
             <p class="card-text text-wrap fw-normal text-dark px-3 pt-2"> Study Material heng; question hlui, notebook etc,. te a awm...</p>
@@ -133,7 +131,7 @@
         <ul class="list-unstyled text-small">
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="/message">Message</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="/contactus">Contact us</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/privacy">Privacy Policy</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/privacy">Privacy</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="/terms">Terms</a></li>
         </ul>
       </div>
