students who finished assignment

--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -4,7 +4,7 @@
   
 <%- include('layouts/headers') -%>
 
-<body class="bg-white">
+<body>
     
     <%- include('layouts/navbar') -%>
     
@@ -200,7 +200,13 @@
                 <tr>
                     
                     <td colspan="3"><a href="stdTopPerformers" class="text-muted fs-6 fw-normal">
-                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Check other assignment...</span></a></td>
+                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Check who answer assignment...</span></a></td>
+                    
+                </tr>
+                <tr>
+                    
+                    <td colspan="3"><a href="stdAssignmentFinished" class="text-muted fs-6 fw-normal">
+                        <i class="fas fa-check-circle ps-2 text-success"></i> <span class="myLink"> Students' who finished assignment...</span></a></td>
                     
                 </tr>
 
