--- a/views/stdScoreboard.ejs
+++ b/views/stdScoreboard.ejs
@@ -5,7 +5,7 @@
 <%- include('layouts/headers') -%>
 
 
-<body class="bg-white">
+<body>
     
     <%- include ('ejsFunction') %> <!--function javascript ejs-->
     
