--- a/views/stdTopPerformers.ejs
+++ b/views/stdTopPerformers.ejs
@@ -5,7 +5,7 @@
 <%- include('layouts/headers') -%>
 
 
-<body class="bg-light">
+<body>
     
     <%- include ('ejsFunction') %> <!--function javascript ejs-->
     
@@ -126,34 +126,6 @@
     
     <%- include('layouts/footer') -%>
     
-    
-
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">DCA 1st Semester Lesson</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body lead">
-        <p><a href="dcatheorywelcomepage" class="text-secondary">Learn Theory Lessons</a></p>
-        <p><a href="dcapracticalwelcomepage" class="text-secondary">Learn Practical Lessons</a></p>
-        <p><a href="dcaDownloadMaterialPage" class="text-secondary">Download Study Materials</a></p>
-        <p><a href="#" class="text-secondary">Scoreboard : Assignment</a></p>
-      </div>
-      <div class="modal-footer mx-auto">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-    
-    
-    
-    
-
   </body>
   
 </html>
