--- a/views/feeRegister.ejs
+++ b/views/feeRegister.ejs
@@ -94,7 +94,7 @@ body {
       
       <td class="text-start text-primary"> 
       
-        <input type="date" class="form-control" id="dateofpayment" placeholder="dateofpayment" name="dateofpayment" required>
+        <input type="text" class="form-control" id="floatingDob" placeholder="dd-mm-yyyy" name="dateofpayment" required>
 
       </td>
  
